test/semantic_error/se_expr_func_void.c0
void f() {}

int ff() {int a; a = f();}
